# sailboat

./: .gitignore  README.md  pyproject.toml
scripts/: apep_ephem_to_h5  apep_setup.py  convert_solar_flux.py  plot_test.py  rpa_testing.py  sail_utils.py  workbench.py
src/sailboat/: __init__.py  a_bit_of_light_reading.py  apep.py  check_sim_progress.py  interpolate.py  plot.py  sim.py  utils.py  write.py
src/sailboat.egg-info/: PKG-INFO  SOURCES.txt
src/sailboat/apep/: apep_ephem_to_h5.py  convert_solar_flux.py  setup.py
src/sailboat/rpa/: __init__.py  plot.py  read.py  sim.py  write.py
src/sailboat/sailboat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sailboat/sim/: plot.py
